Change Log for OpenXava project
===============================

- Algorithm to tight columns in PDF reports optimized: right column is better adjusted and columns that not fit are dropped. 
- New icons for customizing list and collections.
- Link to hide filter is in the filter row itself.
- Links to show and hide the filter are only visible in customization mode.
- Width of columns in automatic PDF reports is calculated from the real content, not from declaration.
- Initial condition and ordering for 'My reports' is populated from the current list.
- Duplicate columns allowed in 'My reports' to filter by range or complex conditions, though only one is shown in the report.
- New TypicalNewOnInit controller that starts the module in detail mode ready to create a new entity.
- New methods addDays(), lastOfYear(), lastOfMonth() and firstOfMonth() added to Dates.
- Fix: Methods setYear(), setMonth() and setDay() of Dates do not work.
- Dialog title of 'My reports' column editing improved.
- Refactoring of 'My reports' code (CustomReport renamed to MyReport) that produces the loss of current store user reports.

OpenXava 4.8.1 (2013-9-30)
--------------------------
- OpenXavaTest now includes Selenium tests for visual testing of views.
- It's possible to add JavaScript functions to release resources to editors.
- New method hasTime() in Dates.
- TLDs moved from openxava.jar to openxava.tld in WEB-INF (to work with Tomcat 7 + Eclipse WTP in Windows).
- Some new common use labels to be used in applications.
- Fall-back encoding now is UTF-8 (before it was ISO-8859-1), however it still tries to use the system encoding first. 
- Fix: Calling to View.getEntity() when the view has view properties fails (only for XML components).
- Fix: Time part of Timestamp properties cannot be used for filtering in list.
- Fix: Application does not start with Tomcat 7 inside Eclipse in Windows.
- Fix: @OnChange actions do not work in both mode.